<resources>
    <string name="app_name">Chirp</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">log in</string>
    <string name="password">Password</string>
    <string name="log_out">log out</string>
    <string name="profile">Profile</string>

    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="already_have_an_account">Already have an account ?</string>

    <string name="concat">%1$s %2$s</string>
    <string name="bio">Bio</string>
    <string name="edit_name">Edit Name</string>
    <string name="save_profile">Save Profile</string>
    <string name="username">Username</string>
    <string name="time">time</string>
    <string name="text_view">Text View</string>
    <string name="online">Online</string>
    <string name="chats">Chats</string>

    <string name="message"><![CDATA[Message>]]></string>
</resources>