<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gdlineLoginLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gdlineLoginRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="0.95"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gdlineLoginBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gdlineLoginTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/gdlineLoginRight"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/gdlineLoginLeft"
                app:layout_constraintTop_toTopOf="@+id/gdlineLoginTop" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_text_box"
                android:backgroundTint="@color/greyLight"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextPass"
                app:layout_constraintEnd_toStartOf="@+id/gdlineLoginRight"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/gdlineLoginLeft"
                app:layout_constraintTop_toBottomOf="@+id/textSignIn"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/editTextPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_text_box"
                android:backgroundTint="@color/greyLight"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
                app:layout_constraintEnd_toStartOf="@+id/gdlineLoginRight"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/gdlineLoginLeft"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text_box"
                android:minHeight="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/gdlineLoginBottom"
                app:layout_constraintEnd_toStartOf="@+id/gdlineLoginRight"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/gdlineLoginLeft" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>